--- a/static/styles.css
+++ b/static/styles.css
@@ -213,10 +213,10 @@ input[type="submit"]:hover {
     position: absolute;
     top: 36px;
     left: 28px;
-
+    font-weight: bolder;
     font-family: 'Russo One', sans-serif;
     font-size: 30px;
-    letter-spacing: 12px;
+    letter-spacing: 11px;
 }
 
 .logo-circles {
