--- a/templates/about.html
+++ b/templates/about.html
@@ -7,8 +7,8 @@
 <div class="about-page">
     <div class="contact">
         <div class="about-me" style="margin-top: -6px;">
-            <h4>Mudit M</h4>
-            <p>22 year old, pre-final year Computer Science Engineering student from New Delhi, India.</p>
+            <h4>{{ values.about['Name'] }}</h4>
+            <p>{{ values.about['Bio'] }}</p>
             {% for i in values.about['Links'] %}
                 <div class="skills-item"><a href="{{ values.about['Links'][i] }}" target="_blank" style="color: inherit; text-decoration: none;">{{ i }}</a></div>
             {% endfor %}
